# vexa-core

./: .dependency-cruiser.cjs  .dockerignore  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  architecture.calm.json  architecture.seal.json  license-exceptions.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  security-insights.yml  tsconfig.base.json  turbo.json
clients/slim/: README.md  RUN.md  pyproject.toml
clients/slim/eval/: README.md  l4_live_smoke.py
clients/slim/tests/: README.md  conftest.py  test_cookbook_l0.py  test_cookbook_l1.py
clients/slim/vexa_slim/: README.md  __init__.py  __main__.py  cli.py  client.py  config.py  cookbook.py  harvest.py  models.py  play.py  scenarios.py  sse.py  web.py
core/agent/: README.md  pyproject.toml
core/agent/contracts/: README.md  __init__.py
core/agent/contracts/event.v1/: README.md  event.schema.json  validate.mjs
core/agent/contracts/event.v1/golden/: Event.email.json  Event.meeting.json  README.md
core/agent/contracts/invoke.v1/: README.md  invoke.schema.json  validate.mjs
core/agent/contracts/invoke.v1/golden/: Invocation.chat-invocation.json  Invocation.meeting-completed.json  Invocation.scheduled.json  README.md
core/agent/contracts/proactive-card.v1/: README.md  proactive-card.schema.json  validate.mjs
core/agent/contracts/proactive-card.v1/golden/: Card.suggestion.json  README.md
core/agent/contracts/routine.v1/: README.md  routine.schema.json  validate.mjs
core/agent/contracts/routine.v1/golden/: README.md  Routine.prompt.json  Routine.scheduled.json
core/agent/contracts/task.v1/: README.md  task.schema.json  validate.mjs
core/agent/contracts/task.v1/golden/: README.md  Task.open.json
core/agent/contracts/tool.v1/: README.md  tool.schema.json  validate.mjs
core/agent/contracts/tool.v1/golden/: README.md  Tool.gmail-send.json
core/agent/contracts/unit.v1/: README.md  unit.schema.json  validate.mjs
core/agent/contracts/unit.v1/golden/: Invocation.event.json  Invocation.message.json  Invocation.scheduled.json  Invocation.transcription.json  README.md
core/agent/contracts/workspace.v1/: README.md  validate.mjs  workspace.schema.json
core/agent/control_plane/: README.md  __init__.py  api.py  bridge.py  dispatch.py  events.py  routines.py  transcription_watcher.py  workspace_attach.py  workspace_reader.py  workspace_routines.py
core/agent/eval/: README.md
core/agent/eval/replay/: replay_transcript.py
core/agent/llm/: README.md  __init__.py  anthropic_api.py  claude_cli.py  claude_code.py  errors.py  openai_compat.py  ports.py  registry.py
core/agent/services/: README.md
core/agent/services/agent-api/: Dockerfile  README.md  pyproject.toml
core/agent/shared/: README.md  __init__.py  adapters.py  agent_config.py  config.py  core.py  governance.py  ports.py  seeding.py  spawn.py  tools.py  units.py
core/agent/tests/: __init__.py  fakes.py  test_agent_config.py  test_agent_llm_loop.py  test_api.py  test_bridge.py  test_config.py  test_contracts_consumer.py  test_cookbook_l2.py  test_cookbook_l3.py  test_core_run.py  test_critical_paths.py  test_events.py  test_github_vcs.py  test_health.py  test_llm_anthropic.py  test_llm_claude_cli.py  test_llm_claude_code.py  test_llm_openai_compat.py  test_llm_registry.py  test_meeting_postprocess_offline.py  test_multi_session.py  test_real_git_workspace.py  test_routine_lifecycle_e2e.py  test_routines.py  test_seeding.py  test_tools.py  test_transcription_watcher.py  test_unit_foundation.py  test_worker.py  test_workspace_attach.py  test_workspace_routines.py
core/agent/tools-seed/: meeting-read-transcript.json
core/agent/worker/: Dockerfile  README.md  __init__.py  __main__.py  decision_claude.py  engine.py  meeting.py  meeting_transcript_mcp.py  worker.py
core/agent/workspace-seeds/: README.md
core/agent/workspace-seeds/default/: .gitignore  CLAUDE.md  README.md
core/agent/workspace-seeds/finos/: CLAUDE.md  LICENSE  NOTICE  README.md  SOURCES.md  onboarding.md
core/gateway/services/conformance/: README.md  pyproject.toml
core/identity/: README.md  pyproject.toml
core/identity/contracts/: README.md
core/identity/contracts/identity.v1/: README.md  identity.schema.json  validate.mjs
core/identity/services/: README.md
core/identity/services/admin-api/: .dockerignore  Dockerfile  README.md  pyproject.toml
core/identity/src/: README.md
core/identity/src/identity_core/: README.md  __init__.py  access.py  dispatch_tokens.py  secrets.py  tokens.py
core/identity/tests/: README.md  test_access.py  test_dispatch_tokens.py  test_identity_contract.py  test_secrets_broker.py  test_tokens.py
core/meetings/services/meeting-api/: Dockerfile  README.md  pyproject.toml
core/meetings/services/transcription/: Dockerfile  Dockerfile.cpu  README.md  pyproject.toml
core/runtime/: Dockerfile  README.md  pyproject.toml
core/runtime/contracts/: README.md
core/runtime/contracts/runtime.v1/: README.md  runtime.schema.json  validate.mjs
core/runtime/contracts/schedule.v1/: README.md  schedule.schema.json  validate.mjs
core/runtime/src/: README.md
core/runtime/src/runtime_kernel/: README.md  __init__.py  __main__.py  api.py  backend.py  callbacks.py  clock.py  docker_backend.py  enforcement.py  k8s_backend.py  kernel.py  models.py  obs.py  process_backend.py  profiles.py  scheduler.py  store.py
core/runtime/tests/: README.md  test_api.py  test_backend_select.py  test_callback_retry.py  test_docker_backend.py  test_enforcement.py  test_health.py  test_image_alias.py  test_k8s_backend.py  test_lifecycle.py  test_profiles.py  test_schedule_api.py  test_schedule_contract.py  test_scheduler.py  test_store.py  test_worker_naming.py
core/seam/meeting-status-ws/: README.md  conftest.py  pyproject.toml
core/seam/meeting-status-ws/tests/: README.md  gateway_fakes.py  test_seam_meeting_status.py
deploy/compose/tests/: README.md  _token.py  _ws.py  chaos_test.py  conftest.py  mock_scenarios_test.py  pyproject.toml  stack_test.py  stress_test.py
(+988 files in other folders)
