[project]
name = "vexa-slim"
version = "0.12.0"
description = "Gateway-only client for the meeting/agent control plane (cookbook = intent layer)."
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27,<1",
    "pytest>=8",
    # pytest-asyncio drives the async cookbook tests (asyncio_mode=auto).
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
