[project]
name = "vexa-seam-meeting-status-ws"
version = "0.12.0"
description = "L3 SEAM proof for the user-scoped meeting.status WS feature: drive the REAL meeting-api intent endpoint (in-memory fakes) → capture the frame it publishes to u:{user_id}:meetings → feed it through the REAL gateway /ws user-scope forward path (in-memory fakes) → assert a faked socket receives it UNCHANGED and ws.v1-golden-conforming. Both services run IN-PROCESS over their injected fakes — no docker, no DB, no live redis. Proves intent→publish→forward end-to-end."
requires-python = ">=3.11"
dependencies = [
    # Union of the two services' test deps so both run in ONE venv, in-process.
    "fastapi>=0.110,<1",
    "httpx>=0.27,<1",
    "pydantic>=2",
    "jsonschema>=4.21,<5",
    "referencing>=0.34,<1",
    "redis>=5,<6",
    "fakeredis>=2.21,<3",
    "croniter>=2,<4",
    "python-multipart>=0.0.9",
    "pytest>=8",
    "pytest-asyncio>=0.23,<2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["."]
asyncio_mode = "auto"
