[project]
name = "vexa-agent-api"
version = "0.12.0"
description = "The agent control plane — turns a transcript.v1 input into a governed action committed to a user workspace (workspace.v1), spawning the worker via runtime.v1."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "jsonschema>=4,<5",
    "referencing>=0.30,<0.40",
    "PyYAML>=6,<7",
    "fastapi>=0.110,<1",
    "python-multipart>=0.0.31,<1",
    "uvicorn>=0.29,<1",
    "pytest>=8,<9",
]

[dependency-groups]
dev = ["fakeredis>=2.20,<3", "httpx>=0.27,<1"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
