[project]
name = "vexa-admin-api"
version = "0.12.0"
description = "Identity service carve (admin-api: users, scoped tokens, /internal/validate) + the Group-1 backing-stack evals (postgres·redis·admin-api)."
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2",
    "redis>=5",
    "testcontainers[postgres,redis]>=4.0",
    "pytest>=8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
