[project]
name = "vexa-meeting-api"
version = "0.12.0"
description = "The cloud meeting-api modular monolith (P2) — ONE uvicorn-able app (create_app) composing front-doored modules: lifecycle (lifecycle.v1 receiver/FSM), bot_spawn (POST /bots → invocation.v1 + runtime.v1 spawn), collector (the folded-in transcript backend: /transcripts, /meetings, /ws/authorize-subscribe + the segments consumer, api.v1), recordings (chunk upload + finalize → meeting.data JSONB, recording.v1), sessions (the MeetingSession model + shared SQLAlchemy mirror), webhooks (webhook.v1), scheduling (schedule.v1), and the recording.v1 master codec."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "httpx>=0.27,<1",
    "jsonschema>=4.21,<5",
    "referencing>=0.34,<1",
    "redis>=5,<6",
    "fakeredis>=2.21,<3",
    "croniter>=2,<4",
    "python-multipart>=0.0.9",   # recordings chunk upload — FastAPI UploadFile/Form parsing
    "pytest>=8",
    "pytest-asyncio>=0.23,<2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# `tests` is on the path so the relocated collector tests import their in-package api.v1 oracle
# (`collector_contracts`) — the same helper the standalone collector tests used.
pythonpath = ["src", "tests"]
asyncio_mode = "auto"
